2021-11-03  Luis Machado  <luis.machado@linaro.org>

	PR gdb/28355

	* arch/aarch64.h (struct aarch64_features): New struct.

2021-10-22  Tom de Vries  <tdevries@suse.de>

	PR tui/28483
	* tui/tui-winsource.c (tui_source_window_base::update_breakpoint_info):
	Fix returns in loop body.

2021-10-04  Tom de Vries  <tdevries@suse.de>

	PR build/28318
	* ax_cxx_compile_stdcxx.m4: Add CXX_DIALECT to CXX.
	* configure: Regenerate.

2021-09-13  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set GDB version number to 11.1.90.DATE-git.

2021-09-13  Joel Brobecker  <brobecker@adacore.com>

	GDB 11.1 released.

2021-09-13  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set GDB version number to 11.1.

2021-09-08  Tom Tromey  <tom@tromey.com>

	* dwarf2/read.h (dwarf2_per_objfile::resize_symtabs): Remove.
	* dwarf2/read.c (all_comp_units_iterator, all_comp_units_range):
	New classes.
	(dwarf2_per_objfile::symtab_set_p)
	(dwarf2_per_objfile::get_symtab, dwarf2_per_objfile::set_symtab):
	Adjust to resizeable vectors.
	(dwarf2_gdb_index::expand_symtabs_matching)
	(dwarf2_base_index_functions::map_symbol_filenames)
	(dwarf2_debug_names_index::expand_symtabs_matching): Use
	all_comp_units_range.
	(dwarf2_initialize_objfile, dwarf2_build_psymtabs)
	(add_type_unit): Don't call resize_symtabs.

2021-09-07  John Baldwin  <jhb@FreeBSD.org>

	* fbsd-nat.c (fbsd_nat_target::info_proc): Use plongest and
	pulongest instead of %j.

2021-08-30  Tom de Vries  <tdevries@suse.de>

	PR cli/28290
	* gdb/corelow.c (core_target_open): Skip call to gdb_abspath in the
	empty-string case.

2021-08-23  Tom de Vries  <tdevries@suse.de>

	PR gdb/26880
	* gdb/exec.c (exec_file_attach): Use %s instead of %ps in call to
	error function.

2021-08-06  Simon Marchi  <simon.marchi@polymtl.ca>
	    Tom de Vries  <tdevries@suse.de>

	PR symtab/28004
	* dwarf2/read.c (dwarf2_rnglists_process, dwarf2_ranges_process):
	Fix zero address complaint.

2021-08-02  Tom Tromey  <tromey@adacore.com>
