@@ -1,3 +1,11 @@
+2021-12-11  Bruno Larsen  <blarsen@redhat.com>
+
+	PR gdb/28480
+
+	Pushed by Joel Brobecker  <brobecker@adacore.com>
+	* valops.c (struct_field_searcher::update_result): Improve
+	ambiguous member detection.
+
 2021-11-03  Luis Machado  <luis.machado@linaro.org>
 
 	PR gdb/28355
